# ntsb-query

./: README.md  pyproject.toml
.github/workflows/: test.yaml
examples/: request-1.md  request-2.md
src/ntsb_query/: __init__.py  query.py
tests/: test_query.py
